[package]
name = "pergola"
description = "abstract types for join-semilattices"
version = "0.6.0"
authors = ["Graydon Hoare <graydon@pobox.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["lattice", "semilattice", "join", "algebra", "crdt"]
repository = "http://github.com/graydon/pergola"
readme = "README.md"

[dependencies]
bit-set = {version = "0.5.0", optional = true }
im = { version = "15.0.0", optional = true }
im-rc = { version = "15.0.0", optional = true }
num-traits = "0.2"

[features]
default = ["im", "im-rc", "bit-set"]

[dev-dependencies]
quickcheck = "0.9.0"
proptest = "0.9.4"