[package]
name = "pergola"
description = "abstract types for join-semilattices"
version = "0.7.0"
authors = ["Graydon Hoare <graydon@pobox.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["lattice", "semilattice", "join", "algebra", "crdt"]
repository = "http://github.com/graydon/pergola"
readme = "README.md"

[dependencies]
bit-set = {version = "0.5.2", optional = true }
bit-vec = {version = "0.6.2", features = ["serde"], optional = true }
im = { version = "15.0.0", features = ["serde"], optional = true }
im-rc = { version = "15.0.0", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
num-traits = "0.2"

[features]
default = ["im", "im-rc", "bits", "serde"]
bits = ["bit-vec", "bit-set"]

[dev-dependencies]
quickcheck = "0.9.0"
proptest = "0.9.4"
